--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,3 @@
 ## Abstract {.page_break_before}
 
-Metabolism and its component reactions are complex, each with variable inputs, outputs, and modifiers. The harmony between these factors consequently determines the health and stability of a cell or an organism. Perturbations to any reaction or set of reactions can have rippling downstream effects, which can be challenging to trace across the total reaction network, particularly when the effects occur between canonical representations of pathways. Researchers have primarily utilized reductionist approaches to understand metabolic reaction systems; however, customary methods often limit the scope of the analysis. Even systems-centric omics approaches can be limited when only a handful of high magnitude signals in the data are prioritized. To address these challenges, we developed Metaboverse, an interactive tool for the exploration and automated extraction of potential regulatory events, patterns, and trends from multi-omic data within the context of the metabolic network and other reaction networks. This framework will be foundational in increasing our ability to holistically understand static, temporal, and multi-condition metabolic events and perturbations as well as gene-metabolite intra-cooperativity. Metaboverse is freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
+Metabolism and its component reactions are complex, each with variable inputs, outputs, and modifiers. The harmony between these factors consequently determines the health and stability of a cell or an organism. Perturbations to any reaction or set of reactions can have rippling downstream effects, which can be challenging to trace across the total reaction network, particularly when the effects occur between canonical representations of pathways. Researchers have primarily utilized reductionist approaches to understand metabolic reaction systems; however, customary methods often limit the scope of the analysis. Even systems-centric omics approaches can be limited when only a handful of high magnitude signals in the data are prioritized. To address these challenges, we developed Metaboverse, an interactive tool for the exploration and automated extraction of potential regulatory events, patterns, and trends from multi-omic data within the context of the metabolic network and other reaction networks. This framework will be foundational in increasing our ability to holistically understand static, temporal, and multi-condition metabolic events and perturbations as well as gene-metabolite cooperativity. Metaboverse is freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
