--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -1,25 +1,25 @@
 ## Introduction
 
-Metabolism is a complex network of reactions and interactions between genes, enzymes, protein complexes, and metabolites [@doi:10.3390/metabo9040076]. To understand these complex components, researchers frequently adopt reductionist approaches to tease apart the characteristics and mechanics of these processes and determine how they fit into the larger picture of biology and disease. Such approaches are a vital component in the scientific process, but a reductionist approach may miss many essential properties of metabolism. For example, in differential gene expression analysis, researchers rely on thresholds of magnitude and statistical significance to prioritize genes for follow-up study. However, this can inadvertently limit the scope of study of metabolism when, in fact, metabolism is a highly interconnected system where distal components and their modulation can have coordinated or rippling effects across the network [@doi:10.1016/j.coisb.2018.10.001; @doi:10.1038/s41540-018-0067-y]. Biological perturbations involve complex, cooperative effects, many of which may seem negligible in isolation. The current approach is analogous to telling the story of Little Red Riding Hood by reading only the 20 most frequent words. Indeed, doing so efficiently highlights keywords like "wolf" and "little red riding hood," but also prevents a coherent story from being told. This approach makes it difficult for someone who has never heard the story of Little Red Riding Hood to comprehend the plot (Figure @fig:little_red).
+Metabolism is a complex network of reactions and interactions among genes, enzymes, protein complexes, and metabolites [@doi:10.3390/metabo9040076]. To understand these complex components, researchers frequently adopt reductionist approaches to tease apart the characteristics and mechanics of these processes and determine how they fit into the larger picture of biology and disease. Such approaches are a vital component in the scientific process, but a reductionist approach may miss many essential properties of metabolism. For example, in differential gene expression analysis, researchers rely on thresholds of magnitude and statistical significance to prioritize genes for follow-up study. However, this approach can inadvertently limit the scope of metabolism when, in fact, metabolism is a highly interconnected system in which distal components and their modulation can have coordinated or rippling effects across the network [@doi:10.1016/j.coisb.2018.10.001; @doi:10.1038/s41540-018-0067-y]. Biological perturbations involve complex, cooperative effects, many of which may seem negligible in isolation. The current approach is analogous to telling the story of Little Red Riding Hood by reading only the 20 most frequent words. Indeed, doing so efficiently highlights keywords like "wolf" and "little red riding hood," but also prevents a coherent story from being told. This approach makes it difficult for someone who has never heard the story of Little Red Riding Hood to comprehend the plot (Figure @fig:little_red).
 
 ![
   **Word cloud of 20 most frequent words or phrases in the story of Little Red Riding Hood.**
   Text taken from the original telling of Little Red Riding Hood by Charles Perrault. Words and phrases derived using [@url:https://github.com/amueller/word_cloud]. Outline derived from the piece, "Little Red Riding Hood" by J.W. Smith.
 ](./content/figures/red_riding.png "Tall image"){#fig:little_red height=2.5in}
 
-Several computational tools have risen to prominence over the past decade to try to resolve these issues in data contextualization. We will highlight four such representative and popular tools for their respective properties, though many more exist [@doi:10.1530/JME-18-0055]. First is MetaboAnalyst, which relies heavily on set enrichment methods for the analysis of data, or examining the belongingness of sets of significantly changed analytes (i.e., metabolite, protein, or gene measurements), for extracting interesting information. Network visualization is available, but it focuses primarily on interaction networks, and its ability to extract regulatory information is limited, particularly in an automated fashion [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310]. Second is Cytoscape, which serves as a general go-to platform for representing biological or other networks. One strength of Cytoscape is the ability to design apps or plug-ins to develop customized analyses; however, comprehensive and metabolism-specific regulatory identification methods are unavailable [@doi:10.1101/gr.1239303]. One plug-in for Cytoscape that focuses on metabolic data is MetScape, but again, this tool is generally limited to pathway enrichment, correlation networks, and data visualization and does not integrate approaches to identify regulatory mechanisms within the data [@doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048]. MetExplore focuses on the curation of networks and is particularly useful for collaborative annotation of emerging models of organisms with incomplete metabolic network curations. It additionally can layer experimental data on the network for visualization [@doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312]. A companion tool to MetExplore is MetExploreViz, which enables interactive and flexible visualization of omics data on metabolic networks [@doi:10.1093/bioinformatics/btx588]. Reactome, which our tool uses for the curation of biological networks, also offers analytical tools for user data, but again relies on set enrichment or manual methods for identifying patterns. While all have their respective utility, there is a pressing need for tools that integrate these features and automate pattern and trend detection across metabolic networks to extract regulatory and other features from data [@doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629]. This need is particularly pronounced in common cases where experimental data have sparse coverage of the metabolic network, a common situation in modern metabolomics. To address these limitations in metabolic data analysis, contextualization, and interpretation, we created Metaboverse, a cross-platform, interactive application to aid users in exploring and interpreting their model's metabolic story and generating new hypotheses from the available information (Figure  @fig:overview).
+Several computational tools have risen to prominence over the past decade to try to resolve these challenges in data contextualization. We will highlight four such representative and popular tools for their respective properties, although many more exist [@doi:10.1530/JME-18-0055]. The first is MetaboAnalyst, which relies heavily on set enrichment methods for the analysis of data, or examining the belongingness of sets of significantly changed analytes (i.e., metabolite, protein, or gene measurements), for extracting interesting information. Network visualization is available, but it focuses primarily on interaction networks, and its ability to extract regulatory information is limited, particularly in an automated fashion [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310]. The second tool is Cytoscape, which serves as a general go-to platform for representing biological or other networks. One strength of Cytoscape is the ability to design apps or plug-ins to develop customized analyses; however, comprehensive and metabolism-specific regulatory identification methods are unavailable [@doi:10.1101/gr.1239303]. One plug-in for Cytoscape that focuses on metabolic data is MetScape, but again, this tool is generally limited to pathway enrichment, correlation networks, and data visualization and does not integrate approaches to identify regulatory mechanisms within the data [@doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048]. The third tool is MetExplore, which focuses on the curation of networks and is particularly useful for collaborative annotation of emerging models of organisms with incomplete metabolic network curations. It additionally can layer experimental data on the network for visualization [@doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312]. A companion tool to MetExplore is MetExploreViz, which enables interactive and flexible visualization of omics data on metabolic networks [@doi:10.1093/bioinformatics/btx588]. The fourth tool, Reactome, which our tool uses for the curation of biological networks, also offers analytical tools for user data, but again relies on set enrichment or manual methods for identifying patterns. Although all these tools have their respective utility, the need is pressing for tools that integrate these features and automate pattern and trend detection across metabolic networks to extract regulatory and other features from data [@doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629]. This need is particularly pronounced in common cases where experimental data have sparse coverage of the metabolic network, a common situation in modern metabolomics. To address these limitations in metabolic data analysis, contextualization, and interpretation, we created Metaboverse, a cross-platform, interactive application to aid users in exploring and interpreting their model's metabolic story and generating new hypotheses from the available information (Figure  @fig:overview).
 
 ![
   **Metaboverse conceptual overview.**
-  Illustration summarizing the usage of Metaboverse to model biological data on the reaction network to rapidly identify regulatory patterns. Traditionally, when scientists perform an omics experiment, they tend to focus on a few features that are differentially regulated. Metaboverse allows a user to input multiple omics data types, which it layers upon the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential within the data. The user can also dynamically explore metabolic pathways and other network representations.
+  Illustration summarizing the usage of Metaboverse to model biological data on the reaction network to rapidly identify regulatory patterns. Metaboverse allows a user to input multiple omics data types, which is layered upon the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential within the data. The user can also dynamically explore metabolic pathways and other network representations.
 ](./content/figures/graphical_abstract.png "Tall image"){#fig:overview height=3.5in}
 
-To provide a robust platform for the exploration of single or multi-omic metabolic data, we developed several computational features to address the aims discussed above. We developed a pattern search engine for the rapid and automated identification of different patterns and trends in omics data on the metabolic network. Conceptually, this search engine borrows principles of topological motif searching from graph theory [@doi:10.1126/science.1089167; @doi:10.1038/ng881] and builds upon the concept of "activity motifs" [@doi:10.1038/nbt.1499]. Briefly, this method analyzes each reaction in the network and identifies all those that match a given pattern, such as the average values of the substrates versus the average values of the products being greater than 2-fold different.
+To provide a robust platform for the exploration of single or multi-omic metabolic data, we developed several computational features to address the aims discussed above. We developed a pattern search engine for the rapid and automated identification of different patterns and trends in omics data on the metabolic network. Conceptually, this search engine borrows principles of topological motif searching from graph theory [@doi:10.1126/science.1089167; @doi:10.1038/ng881] and builds upon the concept of "activity motifs" [@doi:10.1038/nbt.1499]. Briefly, this method analyzes each reaction in the network and identifies all those that match a given pattern, such as the average values of the substrates versus the average values of the products being greater than twofold different.
 
 Another feature introduced in Metaboverse allows for the interactive exploration of specific reactions or reaction entities with on-the-fly pattern search analysis. The user can explore canonical pathways of interest and look for other interesting patterns and trends within these pathways. Perturbations in the abundance or behavior of a particular metabolic component can lead to downstream gene expression changes and other phenotypic modulations in a biological system. Users can therefore select a given component and explore the upstream and downstream reaction neighbors across the total reaction network. Users can also select any component from a drop-down menu and immediately view its reaction neighborhood.
 
-We also include an interactive perturbation exploration module, which displays all the perturbed reactions from the selected super-pathway. For these purposes, we consider a perturbed reaction any reaction with at least one measured component's magnitude change or statistical significance passing the user-defined threshold. For example, if the user were to display all perturbed reactions in <i>Metabolism</i>, naturally, all connected reactions that are sequentially perturbed would connect, while more disconnected components would appear isolated and the user could then explore the extent of perturbations to their system.
+We also include an interactive perturbation exploration module, which displays all the perturbed reactions from the selected super-pathway. Within Metaboverse, we consider a perturbed reaction to be any reaction with at least one measured component's magnitude change or statistical significance passing the user-defined threshold. For example, if the user were to display all perturbed reactions in Metabolism, naturally, all connected reactions that are sequentially perturbed would connect, but more disconnected components would appear isolated and the user could then explore the extent of perturbations to their system.
 
-Finally, we tackle the challenge of sparsity, particularly in metabolomics datasets. We designed a reaction collapsing feature that supports reaction pattern searches across multiple reactions, where intermediate steps of the reaction trajectory may not have measured values for their respective input or output components. This feature is particularly important in allowing for pattern detection across multiple reactions. For example, the human metabolic network consists of over 1000 metabolite nodes, but an average gas chromatography-mass spectrometry (GC-MS) experiment may only quantify and identify 100-200 metabolites. By collapsing neighboring reactions, one can detect patterns that would require the comparison of the terminal ends of that sub-pathway. This reaction collapsing feature can help the user identify more inconspicuous patterns within the total reaction network.
+Finally, we tackle the challenge of sparsity, particularly in metabolomics datasets. We designed a reaction-collapsing feature that supports reaction-pattern searches across multiple reactions, where intermediate steps of the reaction trajectory may not have measured values for their respective input or output components. This feature is particularly important in allowing for pattern detection across multiple reactions. For example, the human metabolic network consists of over 1000 metabolite nodes, but an average gas chromatography-mass spectrometry (GC-MS) experiment may quantify and identify only 100-200 metabolites. By collapsing neighboring reactions, we can detect patterns that would require the comparison of the terminal ends of that sub-pathway. This reaction-collapsing feature can help the user identify more inconspicuous patterns within the total reaction network.
 
-Currently, Metaboverse accepts standard two-condition experiments and time-course or multi-condition experiments. The user can provide any combination of datasets from each omics category (values mapping to gene, protein, and metabolite identifiers). Time-course inputs can consist of matched samples for every time point or a combination of steady-state levels and time points between the omics types. The user provides fold change and statistical measures with appropriate multiple-testing adjustments from their respective omics datasets, which Metaboverse then layers onto the metabolic network. Metaboverse accepts data from various model organisms, including humans, mice, yeast, and zebrafish. The foundational curation of Metaboverse is built on the Reactome knowledgebase, providing 90+ species that the Metaboverse environment can utilize. To validate the features and methods available in Metaboverse, we analyzed a variety of datasets to provide representative vignettes that highlight the reliability of Metaboverse for extracting canonical features, and its power for identifying novel features and patterns and generate new hypotheses. We expect that Metaboverse will become a foundational tool in the analytical toolkit and augment the user's ability to more holistically explore and contextualize metabolic reaction networks.
+Currently, Metaboverse accepts standard two-condition experiments and time-course or multi-condition experiments. The user can provide any combination of datasets from each omics category (values mapping to gene, protein, and metabolite identifiers). Time-course inputs can consist of matched samples for every time point or a combination of steady-state levels and time points between the omics types. The user provides fold change and statistical measures with appropriate multiple-testing adjustments from their respective omics datasets, which Metaboverse then layers onto the metabolic network. Metaboverse accepts data from various model organisms, including humans, mice, yeast, and zebrafish. The foundational curation of Metaboverse is built on the Reactome knowledgebase, providing 90+ species that the Metaboverse environment can utilize. To validate the features and methods available in Metaboverse, we analyzed a variety of datasets to provide representative vignettes that highlight the reliability of Metaboverse for extracting canonical features, and its power for identifying novel features and patterns and generating new hypotheses. We expect that Metaboverse will become a foundational tool in the analytical toolkit and augment the user's ability to more holistically explore and contextualize metabolic reaction networks.
