--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -12,26 +12,26 @@ After the network is curated for the user-specified organism, each node's degree
 In order to overlay user data on the global network, first, user-provided gene expression, protein abundance, and/or metabolite abundances' names are mapped to Metaboverse compatible identifiers. For components that Metaboverse is unable to map, a table is returned to the user so they can provide alternative names to aid in mapping. Second, provided data values are mapped to the appropriate nodes in the network. In cases where gene expression data are available, but protein abundance values are missing, Metaboverse will take the average of the available gene expression values to broadcast to the protein node. For complexes, all available component values (metabolites, proteins, etc.) are averaged. Nodes for which values were inferred will be marked by a dashed border during visualization to clearly show which values are known and which were inferred. Statistical values are derived from the highest value of the components (assuming a scale of 1 denotes no statistical significance and 0 denotes high statistical significance).
 
 ### 3. Collapsing reactions with missing expression or abundance values in user data
-After data mapping is complete, Metaboverse will generate a collapsed network representation for optional viewing during later visualization. Metaboverse enforces a limit of up to three reactions that can be collapsed as data down a pathway should be inferred only so far. Additional parameters for reaction collapse are as follows:   
+After data mapping is complete, Metaboverse will generate a collapsed network representation for optional viewing during later visualization. Metaboverse enforces a limit of up to three reactions that can be collapsed as data down a pathway should be inferred only so far. Additional parameters for the reaction-collapse are as follows:   
 
 1. If a reaction has at least one known or inferred value for inputs (substrates) and one known or inferred value for outputs (products), the reaction will be left as is. During the entire reaction collapse step, known catalysts can be included when assessing whether a reaction has measured output values (increased catalyst should lead to more output in most cases), and inhibitors can be included when assessing whether the reaction has measured input values (increased inhibitor should lead to an accumulation of input in most cases). Catalysts and inhibitors are not included when determining reaction neighbors, as described below.   
 2. If a reaction has at least one known input, the input is left as is, and each reaction that shares the same inputs with the first reaction's outputs is determined whether it has a measured output. If the neighbor reaction does not contain a known output value, the reaction is left as is. If the neighboring reaction does contain a measured output, the first reaction's inputs and the neighboring reaction's outputs are collapsed to form a single, pseudo-reaction between the two. If the reaction has at least one known output, the inverse is performed where neighbors with components identical to the reaction's inputs are assessed for whether a collapsed reaction can be created.   
 3. If a reaction has no measured values, it is determined if the neighboring reactions on both sides (one sharing the reaction's inputs and other sharing the reaction's outputs) have measured values. If both neighbors contain a measured value, a collapsed pseudo-reaction is created, summarizing all three reactions.
-4. All other reactions are maintained as is in the network.
+4. All other reactions are maintained in the network.
 
 For collapsed reactions, appropriate notes are included to describe the collapse. During visualization, these collapsed reactions are marked by black dashed edges and dashed node borders. A graphical representation of how this reaction collapse scheme is executed can be found in Figure @fig:collapse_schematic.
 
 ![
   **Reaction node collapse schematic.**
-  (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. (g) demonstrates how reactions with multiple paths are each collapsed to a representative reaction. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
+  (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) is performed as in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. Example (g) demonstrates how reactions with multiple paths are collapsed to a representative reaction. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
 ](./content/figures/collapse_schematic.png "Tall image"){#fig:collapse_schematic height=6in}
 
 ### 4. Regulatory pattern searches and sorting
-Metaboverse provides a variety of different regulatory patterns for the user to explore. To identify a reaction pattern is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
+Metaboverse provides a variety of different regulatory patterns for the user to explore. To identify a reaction-pattern is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
 
-The identified reaction patterns will be listed in a stamp view. Each stamp represents a reaction, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified patterns can be sorted according to three criteria: the number of pathways containing the reaction (not applicable for pathway pattern identification), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the identified reactions are arranged in order from the largest to the smallest. When sorting by the statistical significance, reactions with statistical significance on both the input side (substrates) and the output side (products) are listed first by the product of their maximum statistics, followed by the reactions with statistical significance on one of the two sides, and finally the reactions with no statistical significance on both sides. Within each tier, the reactions are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the reaction pattern are used.
+The identified reaction-patterns will be listed in a stamp view. Each stamp represents a reaction, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified patterns can be sorted according to three criteria: the number of pathways containing the reaction (not applicable for pathway pattern identification), the magnitude of the change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude of the change, the identified reactions are arranged in order from the largest to the smallest. When sorting by the statistical significance, reactions with statistical significance on both the input side (substrates) and the output side (products) are listed first by the product of their maximum statistics, followed by the reactions with statistical significance on one of the two sides, and finally the reactions with no statistical significance on both sides. Within each tier, the reactions are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the reaction-pattern are used.
 
-When a reaction is selected from the stamp view, all the pathways containing the corresponding reactions will be listed below the stamp. Clicking on a pathway ID will draw the selected pathway in which the reaction pattern was found, with all of the other reaction patterns within this pathway also highlighted. For time-course and multi-condition datasets, the selected reaction pattern's total behavior is displayed below these windows as line-plots showing the reaction components' behavior across all time-points or conditions.
+When a reaction is selected from the stamp view, all the pathways containing the corresponding reactions will be listed below the stamp. Clicking on a pathway ID will draw the selected pathway in which the reaction-pattern was found, with all other reaction-patterns within this pathway also highlighted. For time-course and multi-condition datasets, the selected reaction-pattern's total behavior is displayed below these windows as line-plots showing the reaction components' behavior across all time-points or conditions.
 
 ### 5. Nearest neighborhood searches and prioritization
 To visualize all connections to a given network component, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects the change of one entity might have across the total network, which consequently aids in bridging and identifying any reaction that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the software.
@@ -39,7 +39,7 @@ To visualize all connections to a given network component, a user can select an 
 The user can also limit which entities are shown by enforcing a degree threshold. By setting this value at 50, for example, the network would not show nodes that have 50 or more connections. One caveat, however, is that this feature will occasionally break synchronous pathways into multiple pieces if one of these high-degree nodes formed the bridge between two ends of a pathway.
 
 ### 6. Perturbation networks
-Perturbation networks are generated by searching each reaction in the total reaction network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user. Thus, this could represent log<sub>2</sub> fold changes, z-scores, or any other unit appropriate in the biological context.
+Perturbation networks are generated by searching each reaction in the total reaction network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user. Thus, these networks could represent reactions where a component was perturbed to a significant degree on a log<sub>2</sub> fold change scale, z-score scale, or other appropriate unit for that biological context.
 
 Once a list of perturbed reactions is collected, the network is constructed, including each of these reactions and their components. Perturbed neighboring reactions that share components are thus connected within the network, and perturbed reactions that are not next to other perturbed reactions are shown as disconnected sub-networks.
 
@@ -52,10 +52,10 @@ Force-directed layouts of networks are constructed by taking a user-selected pat
 Some performance optimization features are included by default to prevent computational overload. For example, nearest neighbor sub-networks with more than 1,500 nodes, or nodes with more than 500 edges, will not be plotted because the plotting of this information in real-time can be quite slow.
 
 #### 7.2 Visualizing pathways and super-pathways
-To visualize a pathway, a user selects their pathway of choice, and all component reactions and their substrates, products, modifiers, and metadata are queried from the total reaction database. Super-pathways help categorize these pathways and are defined as any pathway containing more than 200 nodes.
+To visualize a pathway, a user selects a pathway, and all component reactions and their substrates, products, modifiers, and metadata are queried from the total reaction database. Super-pathways help categorize these pathways and are defined as any pathway containing more than 200 nodes.
 
 #### 7.3 Visualizing time-course and multiple condition experiments
-Time-course and multiple condition experiments are automatically detected from the user's input data. When the user provides these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
+Time-course and multiple condition experiments are automatically detected from the user's input data. When users provide these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
 
 #### 7.4 Visualizing compartments
 Compartments are derived from Reactome annotations. Compartment visualizations are generated using D3's hull plotting feature. Compartment boundaries are defined at the reaction levels and made to encompass each reaction's substrates, products, and modifiers for that given compartment.
@@ -79,7 +79,7 @@ By default, reaction and feature labels are displayed by hovering the mouse over
 By selecting the appropriate button, the user can toggle between displaying a full or collapsed pathway representation of the sub-network. By selecting this button, the network is refreshed using the appropriate reaction dictionary, where for visualization of the collapsed representation, a reaction with available collapsed reactions substituted for the original reactions is included for network visualization.
 
 ##### 7.6e Viewing curated pathway image
-Metaboverse visualizes networks dynamically, but the user may be more familiar or comfortable with classical, curated pathway layouts when exploring their data. For a given pathway network, the user can select the appropriate button, and Metaboverse will open a new window with the Reactome curated pathway layout.
+Metaboverse visualizes networks dynamically, but users may be more familiar or comfortable with classical, curated pathway layouts when exploring their data. For a given pathway network, the user can select the appropriate button, and Metaboverse will open a new window with the Reactome curated pathway layout.
 
 ##### 7.6f Saving network visualizations
 The user can generate a PNG output file for any network created in Metaboverse by selecting the appropriate button.
@@ -91,7 +91,7 @@ The number of nearest neighbors to visualize, or the limit to the number of edge
 To help inform the user of selection information and relevant metadata, a space in the legend bar during visualization is reserved for displaying this information, which is updated based on the user's node selections. Compartment and node legends are available for the user's reference by hovering over the appropriate icons.
 
 ### 8. Packaging
-The Metaboverse app is packaged using Electron [@url:https://electronjs.org] . Back-end network curation and data processing are performed using Python [@url:https://www.python.org/] and the NetworkX library [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf]. This back-end functionality is packaged as a single, operating system-specific executable using the PyInstaller library [@url:https://www.pyinstaller.org] and is available to the app's visual interface for data processing. Front-end visualization is performed using Javascript and relies on the D3 [@url:https://d3js.org] and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg [@url:https://github.com/edeno/d3-save-svg] and string-pixel-width [@url:https://github.com/adambisek/string-pixel-width] packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI [@url:https://travis-ci.org/] to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript can be accessed at https://github.come/Metaboverse/manuscript.
+The Metaboverse app is packaged using Electron [@url:https://electronjs.org] . Back-end network curation and data processing are performed using Python [@url:https://www.python.org/] and the NetworkX library [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf]. This back-end functionality is packaged as a single, operating system-specific executable using the PyInstaller library [@url:https://www.pyinstaller.org] and is available to the app's visual interface for data processing. Front-end visualization is performed using Javascript and relies on the D3 [@url:https://d3js.org] and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg [@url:https://github.com/edeno/d3-save-svg] and string-pixel-width [@url:https://github.com/adambisek/string-pixel-width] packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI [@url:https://travis-ci.org/] to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript, can be accessed at https://github.come/Metaboverse/manuscript.
 
 | Name               | Reference                              |
 |--------------------|----------------------------------------|
@@ -114,7 +114,7 @@ Table: Dependencies table. {#tbl:dependencies}
 
 ### 9. Validation using biological data
 
-#### 9.1 <i>MCT1</i> perturbation in <i>Saccharomyces cerevisiae</i>
+#### 9.1 <i>mct1</i> perturbation in <i>Saccharomyces cerevisiae</i>
 
 ##### Yeast Strains
 
@@ -134,7 +134,7 @@ Steady-state quantitative proteomics data were generated as described in [@doi:1
 
 ##### Metabolomics sample preparation
 
-Metabolomics data were generated by growing the appropriate yeast strains in synthetic minimal media (S-min) supplemented with 2% glucose until they reached OD<sub>600</sub> between 0.6-0.8 (n=6; except in one 3-hour wild-type sample, where n=5). Cells were then transferred to S-min media containing 2% raffinose and harvested after 0, 15, 30, 60, and 180 minutes (n=6/time-point/strain, except for the 3-hour wild-type samples, where n=5).
+Metabolomics data were generated by growing the appropriate yeast strains in synthetic complete media supplemented with 2% glucose until they reached saturation (n=6; except in one 3-hour wild-type sample, where n=5). Cells were then transferred to S-min media containing 2% raffinose and leucine and harvested after 0, 15, 30, 60, and 180 minutes (n=6/time-point/strain, except for the 3-hour wild-type samples, where n=5) at OD<sub>600</sub>=0.6-0.8.
 
 ##### Metabolite extraction
 
@@ -153,9 +153,9 @@ Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and proces
 
 ### 10. Data availability
 
-<i>mct1</i>&Delta; and accompanying wild-type transcriptomics time-course data is deposited at the GEO repository under identifier GSE151606 [@url:https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151606]. Metabolomics data is deposited at the Metabolomics Workbench repository under project identifier PR000961, study identifier ST001401 [@doi:10.21228/M8GD71].
+<i>mct1</i>&Delta; and accompanying wild-type transcriptomics time-course data are deposited at the GEO repository under identifier GSE151606 [@url:https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151606]. Metabolomics data are deposited at the Metabolomics Workbench repository under project identifier PR000961, study identifier ST001401 [@doi:10.21228/M8GD71].
 
-The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. Reaction patterns and perturbation network analyses were performed within the Metaboverse platform.
+The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. reaction-patterns and perturbation network analyses were performed within the Metaboverse platform.
 
 The Metaboverse source code is available at https://github.com/Metaboverse/Metaboverse. The latest version of the software can be found at https://github.com/Metaboverse/Metaboverse/releases/latest.
 
