Update figure suggestions from authors and update author information.

--- a/content/03.results.md
+++ b/content/03.results.md
@@ -17,19 +17,19 @@ Following network curation, the user can visualize the available patterns identi
 
 Magnitude change and statistical values associated with each measurement for a measured entity are provided by the user. Once the data are layered upon the network, Metaboverse will consider all the reactions in the network and compare the expression or abundance patterns to those from a pre-defined library of regulatory patterns (please refer to the documentation for more details on available patterns and details on how they are each operating [@url:https://metaboverse.readthedocs.io/en/latest]). Metaboverse then returns a graphical stamp view of conserved patterns and sorts these reactions based on the significance values associated with those components that determined the regulatory feature. We use a three-tiered sorting strategy when sorting by the associated statistical values. The highest prioritized reaction-patterns are those where the relevant components that determined the presence of a regulatory pattern (inputs vs. outputs) are statistically significant. Of these reactions from the first tier, reactions are sorted by lowest to highest cumulative p-value or other relevant statistical value. In the second sorting tier, reactions with at least one side of the reaction with a statistically significant reaction component are sorted by statistical strength. Finally, all other reactions are sorted by the cumulative statistical value for the reaction components. The reaction's stamp shading indicates the sorting tier of each reaction, where green symbolizes that the components on both sides of the reaction passed significance thresholds, yellow symbolizes the components on one side of the reaction passed significance thresholds, and gray symbolizes neither side of the reaction contained significant components. Reactions can also be ordered based on the magnitude of change.
 
-During dynamic pathway visualization, reaction-pattern nodes are visually distinct to quickly draw the user's attention to these interesting patterns. For a given regulatory pattern, the user can then explore each pathway where the reaction was found. Pattern analysis of the reactions within the network will allow the user to rapidly identify interesting features within the data, particularly patterns between canonical pathway representations or within pathways that may seem tangential to their research. In the data vignettes below, we demonstrate this utility further.
+During dynamic pathway visualization, reaction-pattern nodes are visually distinct to quickly draw the user's attention to these interesting patterns. For a given regulatory pattern, the user can then explore each pathway where the reaction was found. Pattern analysis of the reactions within the network will allow the user to rapidly identify interesting features within the data, particularly patterns between canonical pathway representations or within pathways that may seem tangential to their research. In the data vignettes below, we will demonstrate this utility further. See Supplementary Figure @fig:supp_fig_module_pattern for an example of the graphical interface within Metaboverse for rapidly exploring all patterns present within the network.
 
 #### Handling data sparsity within the global biological reaction network
 Missing data points, particularly in metabolomics experiments, can be frequent and make the analysis of pathways and identification of regulatory patterns in the network challenging. Thousands of metabolites are known to participate in human metabolism, but the current state of the technology used for determining which mass spectra belong to which metabolite can be time consuming and often results in a limited quantification of data points. This limitation can lead to gaps in the measured metabolic network and can confound pattern recognition across reactions. Therefore, we developed a reaction-compression algorithm (described in the Methods section) that collapses up to three reactions with missing data points if they can be bridged with known data on the distal ends of the reaction series. Similar concepts have been used in metabolomic analysis before to identify amino acid-related metabolites [@doi:10.1038/s41586-019-1437-3]. However, we introduce the first computational implementation to our knowledge and adopt a slightly more conservative collapsing scheme. These bridged reactions, or collapsed reactions, are visually distinct to show the user where reactions were collapsed and understand what that collapsed reaction summarizes. We found that these collapsed reaction representations aided in identifying regulatory mechanisms across multiple reactions that would have been missed by pattern searching across traditional, uncollapsed representations of human metabolic reactions (see Supplementary Figure @fig:supp_fig_collapse and accompanying text for a brief discussion of the benefits of this feature).
 
 #### Dynamic visualization of organism-specific reaction pathways
-Following the curation of the global network as described above, the user can manually search individual pathways or individual entities and their reaction neighborhoods. For a given selection, all relevant reactions that are annotated as a part of that pathway will be visualized, along with their core input and output components. In addition to these core elements, known catalysts and inhibitors are included, as well as the component proteins, genes, and metabolites that form functional complexes involved in a particular reaction. For nodes representing protein complexes, simulated values are calculated by taking the average of all measured component entities in that complex. If gene values are available, but protein values are not, the user has the option to "broadcast" the gene values to the protein nodes. Assuming all statistical values are between 0 and 1, simulated statistics are calculated by taking the maximum statistical value of all measured component entities in that complex. In cases where a gene value is known, but its protein value is unmeasured, the protein value is optionally inferred using aggregated gene component values. Relevant pathway and analytical metadata are also displayed. All reaction-pattern types are displayed using default thresholds if found within the selected pathway. Additional aids for visualization are also available. These aids include the ability to remove nodes from the visualization that contain a high number of relationships to other network features so that these nodes, which act as hubs in the network, do not lead to cluttered representations. These hub nodes are often ubiquitous features such as water and protons, which may be of limited interest to the user during data visualization [@doi:10.1093/gigascience/giz137]. Compartment domains are also visualized to show the cellular locations of reactions and their components.
+Following the curation of the global network as described above, the user can manually search individual pathways or individual entities and their reaction neighborhoods. For a given selection, all relevant reactions that are annotated as a part of that pathway will be visualized, along with their core input and output components. In addition to these core elements, known catalysts and inhibitors are included, as well as the component proteins, genes, and metabolites that form functional complexes involved in a particular reaction. For nodes representing protein complexes, simulated values are calculated by taking the average of all measured component entities in that complex. If gene values are available, but protein values are not, the user has the option to "broadcast" the gene values to the protein nodes. Assuming all statistical values are between 0 and 1, simulated statistics are calculated by taking the maximum statistical value of all measured component entities in that complex. In cases where a gene value is known, but its protein value is unmeasured, the protein value is optionally inferred using aggregated gene component values. Relevant pathway and analytical metadata are also displayed. All reaction-pattern types are displayed using default thresholds if found within the selected pathway. Additional aids for visualization are also available. These aids include the ability to remove nodes from the visualization that contain a high number of relationships to other network features so that these nodes, which act as hubs in the network, do not lead to cluttered representations. These hub nodes are often ubiquitous features such as water and protons, which may be of limited interest to the user during data visualization [@doi:10.1093/gigascience/giz137]. Compartment domains are also visualized to show the cellular locations of reactions and their components. See Supplementary Figure @fig:supp_fig_module_explore for an example of the general exploration page within Metaboverse and some points of interest within the module.
 
 #### Visualization of downstream effects of network perturbations using reaction neighborhoods
 The user may be interested in a particular metabolite or protein and the downstream effects its perturbation has on other reactions across the entire network. By double-clicking a node of interest or selecting the entity name from the drop-down menu, the user can explore all upstream and downstream effects across all pathways. The user can also define how many neighborhoods to display such that two or more reaction steps downstream or upstream of the selected entity are visualized [@doi:10.1007/PL00009293; @doi:10/bz69nr]. This functionality moves the analysis past traditional, pathway-centric approaches and contextualizes the far-reaching effects that the disruption of metabolism can have across classical pathways. However, as metabolism is a network with high connectivity [@doi:10.1093/gigascience/giz137], expanding past one reaction neighborhood without defining a hub threshold can detrimentally impact performance. In these instances, Metaboverse will display a warning and suggest thresholds to use for the number of neighbors and hubs.
 
 #### Exploring perturbation networks within the data
-At times, a user may be interested in exploring all the perturbed reactions within a network. Metaboverse will display the total perturbation network for a given super-pathway selected by the user. For example, a user could select the Fatty Acid Metabolism super-pathway, and then explore all the perturbed reactions within this context for interesting features. During perturbation network display, all reactions are included and plotted if at least one component of that reaction passes the indicated magnitude or statistical threshold. Naturally, sequentially perturbed reactions will be stitched together in the resulting perturbation network.
+At times, a user may be interested in exploring all the perturbed reactions within a network. Metaboverse will display the total perturbation network for a given super-pathway selected by the user. For example, a user could select the Fatty Acid Metabolism super-pathway, and then explore all the perturbed reactions within this context for interesting features. During perturbation network display, all reactions are included and plotted if at least one component of that reaction passes the indicated magnitude or statistical threshold. Naturally, sequentially perturbed reactions will be stitched together in the resulting perturbation network. See Supplementary Figure @fig:supp_fig_module_perturbation for an example of the perturbation networks page within Metaboverse and some points of interest within the module.
 
 ### Data vignettes
 To demonstrate the utility of Metaboverse, we analyzed both public and new metabolically relevant datasets. From the vignettes provided below, we show that Metaboverse identifies points of interest previously described or expected and rapidly identifies unexpected and systematic regulatory patterns in a reaction network context. For an example of the reaction collapse algorithm's utility, we refer the reader to the associated supplement (Supplementary Figure @fig:supp_fig_collapse). Data from Vignette 1 are available in distributed versions of Metaboverse (as `test_data.zip`) to act as a test dataset for users to familiarize themselves with the input data format. Input and processed data from these vignettes can be found at [@url:https://github.com/Metaboverse/manuscript].
