--- a/content/06.acknowledgements.md
+++ b/content/06.acknowledgements.md
@@ -4,4 +4,4 @@ We thank Thomas O'Connell (Indiana University School of Medicine) for valuable f
 
 ## Funding
 
-J.A.B. is supported by the National Cancer Institute (NCI) of the National Institutes of Health (NIH) under award number F99CA253744 (https://www.cancer.gov/) and received additional support from the National Institute of Diabetes and Digestive and Kidney Diseases (NIDDK) Inter-disciplinary Training Grant T32 Program in Computational Approaches to Diabetes and Metabolism Research, 1T32DK11096601 to Wendy W. Chapman and Simon J. Fisher (https://www.niddk.nih.gov/). S.M.N. received support from The United Mitochondrial Disease Foundation PF-15-046 (https://www.umdf.org/) and the American Cancer Society PF-18-106-01 (https://www.cancer.org/) postdoctoral fellowships, along with T32HL007576. J.E.C. is funded by S10OD016232, S10OD021505, and U54DK110858. This work was supported by funds from the NIDDK fellowship 1T32DK11096601 and the NCI fellowship 1F99CA253744 (to J.A.B.) (https://www.niddk.nih.gov/, https://www.cancer.gov/), the NSF grants DBI-1661375 and IIS-1513616 (to B.W.) (https://www.nsf.gov/), and the NIH grant R35GM131854 (to J.R.) (https://www.nih.gov/). The computational resources used were partially funded by the NIH Shared Instrumentation Grant 1S10OD021644-01A1 (https://www.nih.gov/). Mass spectrometry equipment was obtained through NCRR Shared Instrumentation Grant 1S10OD016232-01, 1S10OD018210-01A1, and 1S10OD021505-01 (to J.E.C.). The funders had no role in study design, data collection and analysis, decision to publish, or preparation of the manuscript. The content of this manuscript is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health (NIH).
+J.A.B. is supported by the National Cancer Institute (NCI) of the National Institutes of Health (NIH) under award number F99CA253744 (https://www.cancer.gov/) and received additional support from the National Institute of Diabetes and Digestive and Kidney Diseases (NIDDK) Inter-disciplinary Training Grant T32 Program in Computational Approaches to Diabetes and Metabolism Research, 1T32DK11096601 to Wendy W. Chapman and Simon J. Fisher (https://www.niddk.nih.gov/). S.M.N. received support from The United Mitochondrial Disease Foundation PF-15-046 (https://www.umdf.org/) and the American Cancer Society PF-18-106-01 (https://www.cancer.org/) postdoctoral fellowships, along with T32HL007576. J.E.C. is funded by S10OD016232, S10OD021505, and U54DK110858. This work was supported by funds from the NIDDK fellowship 1T32DK11096601 and the NCI fellowship 1F99CA253744 (to J.A.B.) (https://www.niddk.nih.gov/, https://www.cancer.gov/), the NSF grants DBI-1661375 and IIS-1513616 (to B.W., Y.Z.) (https://www.nsf.gov/), and the NIH grant R35GM131854 (to J.R.) (https://www.nih.gov/). The computational resources used were partially funded by the NIH Shared Instrumentation Grant 1S10OD021644-01A1 (https://www.nih.gov/). Mass spectrometry equipment was obtained through NCRR Shared Instrumentation Grant 1S10OD016232-01, 1S10OD018210-01A1, and 1S10OD021505-01 (to J.E.C.). The funders had no role in study design, data collection and analysis, decision to publish, or preparation of the manuscript. The content of this manuscript is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health (NIH).
