--- a/content/07.contributions.md
+++ b/content/07.contributions.md
@@ -13,4 +13,4 @@
 * Funding Acquisition: J.A.B., J.E.C., B.W., J.R.
 * Writing - Original Draft Preparation: J.A.B.
 * Writing - Review & Editing: J.A.B., Y.Z., T.C.W., Y.O., S.N.M., J.E.C., B.W., J.R.
-* Visualization: J.A.B., Y.O.
+* Visualization: J.A.B., Y.Z., Y.O.
