Adding reaction pattern examples

--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -1,5 +1,13 @@
 ## Supplementary Material {.page_break_before}
 
+### Examples of reaction patterns in Metaboverse
+The following figure provides examples of reaction patterns that Metaboverse will search for in the network based on the user's data (Supplementary Figure  @fig:supp_fig_pattern_examples).
+
+![
+  **Reaction pattern examples.**
+  1
+](./content/figures/pattern_examples.png "Square image"){#fig:supp_fig_pattern_examples}
+
 ### Example for the Pattern Analysis module
 The following figure provides an example of the `Pattern Analysis` module within Metaboverse, with relevant points of interest highlighted and explained in the figure legend (Supplementary Figure @fig:supp_fig_module_pattern).
 
