--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -5,7 +5,7 @@ The following figure provides examples of reaction patterns that Metaboverse wil
 
 ![
   **Reaction pattern examples.**
-  1
+  (1a-b) Examples where the measured values on both sides of a reaction are averaged. The difference between the two averages is then compared and, if greater than the specified threshold, identified as a reaction pattern. Where the metabolite product is unmeasured, that metabolite is ignored during averaging and comparing the two sides of the reaction. (2a-b) Examples where the minimum measured substrate value and the maximum measured product, or vice versa, are compared and identified as a reaction pattern if the difference passes the specified threshold. (3a-b) Examples where the minimum measured substrate and product values are compared and identified as a reaction pattern if the difference passes the given threshold. Alternatively, an option exists to compare the maximum values on both sides of the reaction. (4) An example where at least two different entities on both sides of the reaction are both upregulated or downregulated past the specified threshold. (5) An example where the same reaction entity on both sides is upregulated or downregulated past the specified threshold, with a modifier component also being upregulated or downregulated. (6) An example where the difference between at least one core reaction component and one reaction modifier is greater than the specified threshold. A star node indicates a reaction node. A purple border on a reaction node indicates a reaction pattern was identified. Circles indicate metabolites, squares indicate protein complexes, and diamonds indicate proteins. Grey arrows indicate the core relationships of a reaction. Green arrows indicate a catalyst component of a reaction, and red arrows indicate an inhibitor component of a reaction. A representative colormap is provided, where increasingly red shades indicate increased abundance, while increasingly blue shades indicate decreased abundance.
 ](./content/figures/pattern_examples.png "Square image"){#fig:supp_fig_pattern_examples}
 
 ### Example for the Pattern Analysis module
