--- a/content/03.results.md
+++ b/content/03.results.md
@@ -13,7 +13,7 @@ We designed Metaboverse as a lightweight, self-contained, cross-platform app for
 We chose to format network visualizations in a reaction-centric format, which means that a sub-network unit is comprised of a reaction node, linked with its reaction input (substrate) and reaction output (product) nodes, along with any modifier (catalyst or inhibitor) nodes. If modifier nodes are a protein complex, the component proteins of that complex are linked to the complex node. Any genes available in the database are linked to their related proteins. Each node and link type are color-coded to help the user quickly distinguish the details of a reaction sub-network structure. Reactions with matching input or output sides are naturally linked when the network is constructed, allowing a multi-reaction pathway to emerge from this network structure. This formatting differs from other formatting styles with which the user may be familiar, such as KEGG pathway maps, for various reasons. While classical pathway definitions are used to group sets of reactions during visualization, analytical methods such as the pattern search in Metaboverse explore the global reaction network and display the pathways more accurately within their network context. This approach aids in making pattern analysis within the reaction network less subject to biases arising from constraining analysis to only familiar pathways and enables the exploration of patterns that may not neatly fit into canonical pathway representations. As this dynamic visualization approach differs from more classical imagery, each pathway within the visualization module contains a button linking to a more traditional representation of the pathway for reference, which is sourced from Reactome [@doi:10.1093/nar/gkz1031].
 
 #### Rapid identification of interesting regulatory patterns in the reaction network
-Following network curation, the user can visualize the available patterns identified across all reactions in the network. In a computer science context, a motif is a recurring pattern within a network structure or the organization of network entities and their relationships. However, with omics data, we are more interested in identifying patterns involving expression or abundance of genes, proteins, and metabolites. Previous work by Checkik, et al. introduced the concept of "activity motifs." Instead of identifying motifs based on sub-network structure, they identified motifs using the expression characteristics of nodes in transcription factor binding signaling networks [@doi:10.1038/nbt.1499]. We adapted this methodology to identify and interactively display interesting regulatory hotspots across all reactions in the network. For example, a reaction's inputs may exhibit increased levels and its outputs decreased levels, suggesting a possible regulatory event occurring at the reaction (see Supplementary Figure @fig:supp_fig_pattern_examples for examples of reaction patterns and @fig:supp_fig_module_pattern for an example of the visual output of this module in Metaboverse).
+Following network curation, the user can visualize the available patterns identified across all reactions in the network. In a computer science context, a motif is a recurring pattern within a network structure or the organization of network entities and their relationships. However, with omics data, we are more interested in identifying patterns involving expression or abundance of genes, proteins, and metabolites. Previous work by Checkik, et al. introduced the concept of "activity motifs." Instead of identifying motifs based on sub-network structure, they identified motifs using the expression characteristics of nodes in transcription factor binding signaling networks [@doi:10.1038/nbt.1499]. We adapted this methodology to identify and interactively display interesting regulatory hotspots across all reactions in the network. For example, a reaction's inputs may exhibit increased levels and its outputs decreased levels, suggesting a possible regulatory event occurring at the reaction (see Supplementary Figure @fig:supp_fig_pattern_examples for examples of reaction patterns and Supplementary Figure @fig:supp_fig_module_pattern for an example of the visual output of this module in Metaboverse).
 
 Magnitude change and statistical values associated with each measurement for a measured entity are provided by the user. Once the data is layered upon the network, Metaboverse will consider all the reactions in the network and compare the expression or abundance patterns to those from a pre-defined library of regulatory patterns (please refer to the documentation for more details on available patterns and details on how they each operate [@url:https://metaboverse.readthedocs.io/en/latest]). Metaboverse then returns a graphical stamp view of identified patterns and sorts these reactions based on the significance values associated with those components that determined the regulatory feature. We use a three-tiered sorting strategy when sorting by the associated statistical values. The highest prioritized reaction patterns are those where the relevant components that determined the presence of a regulatory pattern (inputs vs. outputs) are statistically significant. Of these reactions from the first tier, reactions are sorted by lowest to highest cumulative p-value or other relevant statistical value. In the second sorting tier, reactions with at least one side of the reaction with a statistically significant reaction component are sorted by statistical strength. Finally, all other reactions are sorted by the cumulative statistical value for the reaction components. The reaction's stamp shading indicates the sorting tier of each reaction, where green symbolizes that the components on both sides of the reaction passed significance thresholds, yellow symbolizes components on one side of the reaction passed significance thresholds, and gray symbolizes neither side of the reaction contained significant components. Reactions can also be ordered based on the magnitude of change.
 
